--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "16.1.4",
     "@angular/router": "16.1.4",
     "@asymmetrik/ngx-leaflet": "^16.0.1",
+    "@auth0/angular-jwt": "^5.2.0",
     "@ckeditor/ckeditor5-angular": "^7.0.0",
     "@ckeditor/ckeditor5-build-classic": "^38.1.1",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
@@ -46,6 +47,7 @@
     "echarts": "^5.4.2",
     "firebase": "^10.0.0",
     "flatpickr": "^4.6.13",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "masonry-layout": "^4.2.2",
     "metismenujs": "^1.4.0",
