--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "16.1.4",
     "@angular/forms": "16.1.4",
     "@angular/localize": "16.1.4",
+    "@angular/material": "^16.1.4",
     "@angular/platform-browser": "16.1.4",
     "@angular/platform-browser-dynamic": "16.1.4",
     "@angular/router": "16.1.4",
