--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@asymmetrik/ngx-leaflet": "^16.0.1",
     "@ckeditor/ckeditor5-angular": "^7.0.0",
     "@ckeditor/ckeditor5-build-classic": "^38.1.1",
+    "@ckeditor/ckeditor5-ckfinder": "^41.1.0",
+    "@ckeditor/ckeditor5-image": "^41.1.0",
+    "@ckeditor/ckeditor5-link": "^41.1.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@fullcalendar/angular": "^6.1.8",
     "@fullcalendar/core": "^6.1.8",
