--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "rxjs": "^7.8.1",
     "sass-loader": "^13.3.2",
     "simplebar-angular": "^3.2.4",
-    "sweetalert2": "^11.7.16",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.6.0",
     "zone.js": "^0.13.1"
   },
@@ -89,7 +89,7 @@
     "@types/leaflet": "^1.9.3",
     "@types/node": "^20.4.1",
     "@types/youtube": "^0.0.47",
-    "codelyzer": "^6.0.2",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "^5.0.1",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.4.2",
@@ -97,7 +97,7 @@
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "protractor": "~7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
