--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^14.0.0",
     "@popperjs/core": "^2.11.8",
+    "angular-in-memory-web-api": "^0.17.0",
     "angular-ng-stepper": "^2.0.0",
     "angularx-flatpickr": "^7.3.0",
     "apexcharts": "^3.41.0",
     "bootstrap": "5.3.0",
     "chart.js": "^4.3.0",
     "chartist": "^1.3.0",
+    "dhtmlx-scheduler": "^7.0.2",
     "echarts": "^5.4.2",
     "firebase": "^10.0.0",
     "flatpickr": "^4.6.13",
