--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.4",
-    "@angular/cdk": "^16.1.4",
+    "@angular/cdk": "^16.2.14",
     "@angular/common": "16.1.4",
     "@angular/compiler": "16.1.4",
     "@angular/core": "16.1.4",
@@ -44,6 +44,7 @@
     "chart.js": "^4.3.0",
     "chartist": "^1.3.0",
     "echarts": "^5.4.2",
+    "file-saver": "^2.0.5",
     "firebase": "^10.0.0",
     "flatpickr": "^4.6.13",
     "leaflet": "^1.9.4",
