--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
               "src/assets"
             ],
             "styles": [
-            "node_modules/chartist/dist/index.css",
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/chartist/dist/index.css",
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "./node_modules/ngx-ui-switch/ui-switch.component.css",
@@ -115,6 +116,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
