--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.4",
-    "@angular/cdk": "^16.1.4",
+    "@angular/animations": "16.1.4",
+    "@angular/cdk": "^16.2.14",
     "@angular/common": "16.1.4",
     "@angular/compiler": "16.1.4",
     "@angular/core": "16.1.4",
     "@angular/forms": "16.1.4",
     "@angular/localize": "16.1.4",
+    "@angular/material": "^16.2.14",
     "@angular/platform-browser": "16.1.4",
     "@angular/platform-browser-dynamic": "16.1.4",
     "@angular/router": "16.1.4",
@@ -57,6 +58,7 @@
     "ng-otp-input": "^1.9.2",
     "ng2-charts": "^4.1.1",
     "ngx-bootstrap": "^10.3.0",
+    "ngx-chips": "^3.0.0",
     "ngx-color-picker": "^14.0.0",
     "ngx-cookie-service": "^16.0.0",
     "ngx-drag-drop": "^16.0.0",
