--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.2",
-    "@angular/cdk": "^16.1.4",
-    "@angular/common": "17.2.2",
-    "@angular/compiler": "17.2.2",
-    "@angular/core": "17.2.2",
+    "@angular/cdk": "^16.2.14",
+    "@angular/common": "^17.2.2",
+    "@angular/compiler": "^17.2.2",
+    "@angular/core": "^17.2.2",
     "@angular/forms": "17.2.2",
     "@angular/localize": "17.2.2",
-    "@angular/platform-browser": "17.2.2",
-    "@angular/platform-browser-dynamic": "17.2.2",
+    "@angular/material": "^16.1.4",
+    "@angular/platform-browser": "^17.2.2",
+    "@angular/platform-browser-dynamic": "^17.2.2",
     "@angular/router": "17.2.2",
     "@asymmetrik/ngx-leaflet": "^16.0.1",
     "@ckeditor/ckeditor5-angular": "^7.0.0",
@@ -47,6 +48,9 @@
     "echarts": "^5.4.2",
     "firebase": "^10.0.0",
     "flatpickr": "^4.6.13",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
     "masonry-layout": "^4.2.2",
     "metismenujs": "^1.4.0",
@@ -72,8 +76,9 @@
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "^7.8.1",
     "sass-loader": "^13.3.2",
+    "signature_pad": "^4.1.7",
     "simplebar-angular": "^3.2.4",
-    "sweetalert2": "^11.7.16",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.6.0",
     "zone.js": "^0.14.4"
   },
@@ -89,7 +94,7 @@
     "@types/leaflet": "^1.9.3",
     "@types/node": "^20.4.1",
     "@types/youtube": "^0.0.47",
-    "codelyzer": "^6.0.2",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "^5.0.1",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.4.2",
@@ -97,7 +102,7 @@
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
   }
