PDF Journal+ plusieurs tàches

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^14.0.0",
     "@popperjs/core": "^2.11.8",
+    "@types/jspdf": "^2.0.0",
     "angular-ng-stepper": "^2.0.0",
     "angularx-flatpickr": "^7.3.0",
     "apexcharts": "^3.41.0",
@@ -47,6 +48,9 @@
     "file-saver": "^2.0.5",
     "firebase": "^10.0.0",
     "flatpickr": "^4.6.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "leaflet": "^1.9.4",
     "masonry-layout": "^4.2.2",
     "metismenujs": "^1.4.0",
