--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.4",
-    "@angular/cdk": "^16.1.4",
+    "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^16.2.14",
     "@angular/common": "16.1.4",
     "@angular/compiler": "16.1.4",
     "@angular/core": "16.1.4",
     "@angular/forms": "16.1.4",
     "@angular/localize": "16.1.4",
-    "@angular/material": "^16.1.4",
+    "@angular/material": "^16.2.14",
     "@angular/platform-browser": "16.1.4",
     "@angular/platform-browser-dynamic": "16.1.4",
     "@angular/router": "16.1.4",
@@ -38,12 +38,16 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^14.0.0",
     "@popperjs/core": "^2.11.8",
+    "angular-calendar": "^0.31.0",
     "angular-ng-stepper": "^2.0.0",
+    "angular-scheduler": "^0.0.1",
+    "angular-star-rating": "^7.0.0",
     "angularx-flatpickr": "^7.3.0",
     "apexcharts": "^3.41.0",
     "bootstrap": "5.3.0",
     "chart.js": "^4.3.0",
     "chartist": "^1.3.0",
+    "date-fns": "^3.3.1",
     "echarts": "^5.4.2",
     "firebase": "^10.0.0",
     "flatpickr": "^4.6.13",
@@ -66,6 +70,8 @@
     "ngx-masonry": "^14.0.1",
     "ngx-owl-carousel-o": "^16.0.0",
     "ngx-slider-v2": "^16.0.2",
+    "ngx-socket-io": "^4.6.1",
+    "ngx-star-rating": "^2.1.0",
     "ngx-toastr": "^17.0.2",
     "ngx-ui-switch": "^14.0.3",
     "ngx-youtube-player": "^12.0.2",
@@ -73,6 +79,7 @@
     "rxjs": "^7.8.1",
     "sass-loader": "^13.3.2",
     "simplebar-angular": "^3.2.4",
+    "socket.io-client": "^4.7.4",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.6.0",
     "zone.js": "^0.13.1"
@@ -97,7 +104,7 @@
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "protractor": "^3.3.0",
+    "protractor": "^7.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
