Email refus ou acceptation et attestation

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "flatpickr": "^4.6.13",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
+    "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
     "masonry-layout": "^4.2.2",
@@ -91,6 +92,7 @@
     "@types/chartist": "^1.0.0",
     "@types/jasmine": "^4.3.5",
     "@types/jasminewd2": "^2.0.10",
+    "@types/jquery": "^3.5.29",
     "@types/leaflet": "^1.9.3",
     "@types/node": "^20.4.1",
     "@types/youtube": "^0.0.47",
