--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.4",
-    "@angular/cdk": "^16.1.4",
+    "@angular/cdk": "^17.3.1",
     "@angular/common": "16.1.4",
     "@angular/compiler": "16.1.4",
     "@angular/core": "16.1.4",
@@ -66,6 +66,7 @@
     "ngx-mask": "^16.2.3",
     "ngx-masonry": "^14.0.1",
     "ngx-owl-carousel-o": "^16.0.0",
+    "ngx-pagination": "^6.0.3",
     "ngx-slider-v2": "^16.0.2",
     "ngx-toastr": "^17.0.2",
     "ngx-ui-switch": "^14.0.3",
