--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "ng-apexcharts": "^1.7.7",
     "ng-chartist": "^8.1.0",
     "ng-otp-input": "^1.9.2",
+    "ng-recaptcha": "^13.2.1",
     "ng2-charts": "^4.1.1",
     "ngx-bootstrap": "^10.3.0",
+    "ngx-captcha": "^13.0.0",
     "ngx-color-picker": "^14.0.0",
     "ngx-cookie-service": "^16.0.0",
     "ngx-drag-drop": "^16.0.0",
