--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chart.js": "^4.3.0",
     "chartist": "^1.3.0",
     "echarts": "^5.4.2",
+    "file-saver": "^2.0.5",
     "firebase": "^10.0.0",
     "flatpickr": "^4.6.13",
     "html2canvas": "^1.4.1",
