--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "16.1.4",
     "@angular/forms": "16.1.4",
     "@angular/localize": "16.1.4",
+    "@angular/material": "^16.1.4",
     "@angular/platform-browser": "16.1.4",
     "@angular/platform-browser-dynamic": "16.1.4",
     "@angular/router": "16.1.4",
@@ -26,10 +27,10 @@
     "@ckeditor/ckeditor5-angular": "^7.0.0",
     "@ckeditor/ckeditor5-build-classic": "^38.1.1",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
-    "@fullcalendar/angular": "^6.1.8",
-    "@fullcalendar/core": "^6.1.8",
-    "@fullcalendar/daygrid": "^6.1.8",
-    "@fullcalendar/interaction": "^6.1.8",
+    "@fullcalendar/angular": "^6.1.10",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/list": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@ng-select/ng-select": "^11.0.0",
@@ -44,7 +45,7 @@
     "bootstrap": "5.3.0",
     "chart.js": "^4.3.0",
     "chartist": "^1.3.0",
-    "dhtmlx-scheduler": "^7.0.2",
+    "dhtmlx-scheduler": "^7.0.3",
     "echarts": "^5.4.2",
     "file-saver": "^2.0.5",
     "firebase": "^10.0.0",
@@ -71,6 +72,8 @@
     "ngx-toastr": "^17.0.2",
     "ngx-ui-switch": "^14.0.3",
     "ngx-youtube-player": "^12.0.2",
+    "primeicons": "^7.0.0",
+    "primeng": "^16.9.1",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "^7.8.1",
     "sass-loader": "^13.3.2",
